<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="naviModel" type="com.example.nvblog.ui.navigation.NavigationViewModel"/>
    </data>

    <androidx.core.widget.NestedScrollView
            android:id="@+id/navi_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/navigation_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/navigation_bloginfo_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:padding="@dimen/dp20"
                    android:background="@color/colorPrimary"
            >

                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/navi_user_image"
                        android:layout_width="@dimen/dp45"
                        android:layout_height="@dimen/dp45"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:bindImage="@{naviModel.blogItem.userImage}"
                        app:bindCircleCrop="@{naviModel.circleCrop}"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/navi_userid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@+id/navi_user_image"
                        app:layout_constraintTop_toTopOf="@+id/navi_user_image"
                        android:layout_marginStart="@dimen/dp10"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp16"
                        android:text="@{naviModel.blogItem.userId}"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/navi_blog_today_and_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@+id/navi_userid"
                        app:layout_constraintTop_toBottomOf="@+id/navi_userid"
                        android:textSize="@dimen/sp11"
                        android:textColor="#B5FFFFFF"
                        android:layout_marginTop="@dimen/dp8"
                        android:text="@{naviModel.convertVisiteCount(naviModel.blogItem.todayCount, naviModel.blogItem.totalCount)}"
                />

                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/navi_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:src="@drawable/ic_close_white_24dp"
                        android:onClick="@{() -> naviModel.command(naviModel.CMD_HIDE_NAVI)}"
                />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                    android:id="@+id/navi_icon_button_container"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/navigation_bloginfo_container"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:background="@color/colorPrimary"
            >

                <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_add_alert_white_24dp"
                        android:text="@string/navi_news"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginStart="@dimen/dp1"
                        android:paddingTop="@dimen/dp15"
                        android:paddingBottom="@dimen/dp15"
                        android:textColor="#B5FFFFFF"
                />

                <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_group_white_24dp"
                        android:text="@string/navi_friends_list"
                        android:textColor="#B5FFFFFF"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginStart="@dimen/dp1"
                        android:paddingTop="@dimen/dp15"
                        android:paddingBottom="@dimen/dp15"
                />

                <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_graphic_eq_white_24dp"
                        android:text="@string/navi_statistics"
                        android:textColor="#B5FFFFFF"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginStart="@dimen/dp1"
                        android:paddingTop="@dimen/dp15"
                        android:paddingBottom="@dimen/dp15"
                />

                <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_edit_white_24dp"
                        android:text="@string/navi_write"
                        android:textColor="#B5FFFFFF"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginStart="@dimen/dp1"
                        android:paddingTop="@dimen/dp15"
                        android:paddingBottom="@dimen/dp15"
                />

            </LinearLayout>

            <View
                    android:id="@+id/navi_dummy_below_icon_button"
                    android:layout_width="match_parent" android:layout_height="@dimen/dp5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/navi_icon_button_container"
                    android:background="@drawable/shape_divider_gray"
            />

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/navi_graph_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/navi_dummy_below_icon_button"
                    app:layout_constraintEnd_toEndOf="parent"
            >

                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/navi_graph_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:bindImageRes="@{naviModel.dummyGraph}"
                />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                    android:id="@+id/navi_dummy_below_navi_graph"
                    android:layout_width="match_parent" android:layout_height="@dimen/dp5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/navi_graph_container"
                    android:background="@drawable/shape_divider_gray"
            />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/navi_menu_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/navi_dummy_below_navi_graph"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:descendantFocusability="blocksDescendants"
                    android:overScrollMode="never"
                    app:bindAdapter="@{naviModel.adapter}"
                    app:bindItems="@{naviModel.items}"
                    app:bindItemDecoration="@{naviModel.itemDecoration}"
            />

            <View
                    android:id="@+id/navi_dummy_below_menu_recycler"
                    android:layout_width="match_parent" android:layout_height="@dimen/dp5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/navi_menu_recycler"
                    android:background="@drawable/shape_divider_gray"
            />

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/navi_banner_area_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/navi_dummy_below_menu_recycler"
                    app:layout_constraintEnd_toEndOf="parent"
            >

                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/navi_banner_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:bindImageRes="@{naviModel.dummyBanner}"
                />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/navi_naver_corp_area_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/navi_banner_area_container"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="#ececec"
            >

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/navi_naver_corp_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_margin="@dimen/dp10"
                        android:paddingStart="@dimen/dp5"
                        android:text="NAVER Corp."
                />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>
